--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,11 +5,13 @@
   margin: 0;
   padding: 0;
 }
+$background: rgb(248, 248, 245);
 :root {
   font-size: 62.5%;
   body {
     font-family: 'Viga', sans-serif;
     font-size: 1.6rem;
+    background-color: $background;
   }
 }
 main {
@@ -18,26 +20,24 @@ main {
 }
 
 nav {
-  position: absolute;
-  display: flex;
-  width: 50%;
-  justify-content: flex-end;
-  top: 3rem;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  margin: 1rem;
   font-size: 1.6rem;
   text-transform: uppercase;
   a {
     color: #000000;
     text-decoration: none;
     padding-left: 1rem;
+    text-align: center;
+    width: 10rem;
   }
 }
 .first-view {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 20vh;
+  grid-template-rows: 10vh;
   align-items: center;
-  height: 100%;
-  width: 100%;
 }
 .header {
   grid-column: 1/2;
@@ -49,6 +49,10 @@ nav {
     font-size: 4.8rem;
     text-transform: uppercase;
   }
+  @media (max-width: 1048px) {
+    grid-column: 1/3;
+    width: auto;
+  }
 }
 .first-img {
   grid-column: 2/2;
@@ -58,6 +62,10 @@ nav {
     width: 45rem;
     margin-left: auto;
     margin-right: auto;
+  }
+  @media (max-width: 1024px) {
+    grid-row: 3/3;
+    width: 30rem;
   }
 }
 .title {
