--- a/styles/index.scss
+++ b/styles/index.scss
@@ -8,10 +8,13 @@
 $background: rgb(248, 248, 245);
 :root {
   font-size: 62.5%;
+  overflow-x: hidden;
   body {
     font-family: 'Viga', sans-serif;
     font-size: 1.6rem;
     background-color: $background;
+    height: 100%;
+    width: 100%;
   }
 }
 main {
@@ -49,8 +52,11 @@ nav {
     font-size: 4.8rem;
     text-transform: uppercase;
   }
-  @media (max-width: 1048px) {
+  @media (max-width: 468px) {
     grid-column: 1/3;
+    width: auto;
+  }
+  @media (max-width: 1048px) {
     width: auto;
   }
 }
@@ -62,10 +68,19 @@ nav {
     width: 45rem;
     margin-left: auto;
     margin-right: auto;
+
+    @media (min-width: 468px) and (max-width: 1024px) {
+      width: 35rem;
+    }
   }
-  @media (max-width: 1024px) {
+  @media (min-width: 768px) and (max-width: 1024px) {
+    grid-row: 2/2;
+    margin: 0;
+  }
+  @media (max-width: 468px) {
     grid-row: 3/3;
     width: 30rem;
+    margin: 0;
   }
 }
 .title {
