--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,7 +19,8 @@ $background: rgb(248, 248, 245);
 }
 main {
   display: grid;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 nav {
@@ -37,6 +38,7 @@ nav {
     width: 10rem;
   }
 }
+/* First View */
 .first-view {
   display: grid;
   grid-template-rows: 10vh;
@@ -70,7 +72,7 @@ nav {
     margin-right: auto;
 
     @media (min-width: 468px) and (max-width: 1024px) {
-      width: 35rem;
+      width: 40rem;
     }
   }
   @media (min-width: 768px) and (max-width: 1024px) {
@@ -97,4 +99,46 @@ nav {
   font-size: 1.4rem;
   font-weight: 300;
   font-family: 'Open-Sans', sans-serif;
+}
+/* Second View  */
+.second-view {
+  display: grid;
+  grid-template-rows: 20vh;
+  align-items: flex-end;
+}
+h2 {
+  font-size: 3.2rem;
+  grid-row: 1/2;
+  grid-column: 1/2;
+  margin-left: 4rem;
+}
+.second-img {
+  grid-row: 2/2;
+  grid-column: 2/2;
+  margin: auto;
+
+  img {
+    width: 30rem;
+    margin: auto;
+    padding-bottom: 3rem;
+  }
+  .title {
+    font-size: 2rem;
+    margin: 0;
+  }
+
+  ul {
+    width: 40rem;
+    font-family: 'Open sans', sans-serif;
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+    list-style: square;
+  }
+  li {
+    height: 10rem;
+  }
+  .source {
+    font-size: 1.6rem;
+    font-family: 'Open sans', sans-serif;
+  }
 }
