--- a/styles/index.scss
+++ b/styles/index.scss
@@ -106,13 +106,30 @@ nav {
   grid-template-rows: 20vh;
   align-items: flex-end;
 }
+.second-left {
+  grid-row: 2/2;
+  grid-column: 1/2;
+  margin: auto;
+  justify-content: flex-start;
+  width: 45rem;
+  img {
+    width: 40rem;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .text {
+    width: 45rem;
+    line-height: 2.5rem;
+    white-space: pre-line;
+    height: 100%;
+  }
+}
 h2 {
   font-size: 3.2rem;
-  grid-row: 1/2;
-  grid-column: 1/2;
   margin-left: 4rem;
 }
-.second-img {
+.second-right {
   grid-row: 2/2;
   grid-column: 2/2;
   margin: auto;
@@ -122,11 +139,6 @@ h2 {
     margin: auto;
     padding-bottom: 3rem;
   }
-  .title {
-    font-size: 2rem;
-    margin: 0;
-  }
-
   ul {
     width: 40rem;
     font-family: 'Open sans', sans-serif;
@@ -141,4 +153,9 @@ h2 {
     font-size: 1.6rem;
     font-family: 'Open sans', sans-serif;
   }
+}
+.title-second {
+  font-size: 2rem;
+  height: 5rem;
+  margin: 0;
 }
