--- a/styles/index.scss
+++ b/styles/index.scss
@@ -17,8 +17,7 @@ $background: rgb(248, 248, 245);
     width: 100%;
   }
 }
-main {
-  display: grid;
+.content {
   width: 100vw;
   height: 100vh;
 }
@@ -41,12 +40,17 @@ nav {
 /* First View */
 .first-view {
   display: grid;
-  grid-template-rows: 10vh;
   align-items: center;
+  grid-template-rows: 100vh;
+  width: 100%;
+  @media (max-width: 468px) {
+  }
+  @media (min-width: 748px) and (max-width: 1040px) {
+  }
 }
 .header {
   grid-column: 1/2;
-  grid-row: 2/2;
+  grid-row: 1/1;
   width: 50rem;
   justify-self: center;
 
@@ -55,34 +59,29 @@ nav {
     text-transform: uppercase;
   }
   @media (max-width: 468px) {
+    grid-row: 1/3;
     grid-column: 1/3;
-    width: auto;
-  }
-  @media (max-width: 1048px) {
-    width: auto;
   }
 }
 .first-img {
   grid-column: 2/2;
-  grid-row: 2/2;
+  grid-row: 1/2;
   margin: auto;
+  width: 50rem;
   img {
     width: 45rem;
     margin-left: auto;
     margin-right: auto;
 
-    @media (min-width: 468px) and (max-width: 1024px) {
+    @media (max-width: 468px) {
       width: 40rem;
+      grid-row: 2/3;
     }
   }
   @media (min-width: 768px) and (max-width: 1024px) {
-    grid-row: 2/2;
-    margin: 0;
   }
   @media (max-width: 468px) {
-    grid-row: 3/3;
     width: 30rem;
-    margin: 0;
   }
 }
 .title {
@@ -103,15 +102,38 @@ nav {
 /* Second View  */
 .second-view {
   display: grid;
-  grid-template-rows: 20vh;
-  align-items: flex-end;
+  width: 100%;
 }
 .second-left {
   grid-row: 2/2;
   grid-column: 1/2;
   margin: auto;
-  justify-content: flex-start;
+
+  img {
+    width: 30rem;
+    margin: auto;
+    padding: 3rem 0 3rem 0;
+  }
+  ul {
+    width: 40rem;
+    font-family: 'Open sans', sans-serif;
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+    list-style: square;
+  }
+  li {
+    height: 10rem;
+  }
+  .source {
+    font-size: 1.6rem;
+    font-family: 'Open sans', sans-serif;
+  }
+}
+.second-right {
+  grid-row: 2/2;
+  grid-column: 2/2;
   width: 45rem;
+  margin: auto;
   img {
     width: 40rem;
     height: auto;
@@ -129,31 +151,7 @@ h2 {
   font-size: 3.2rem;
   margin-left: 4rem;
 }
-.second-right {
-  grid-row: 2/2;
-  grid-column: 2/2;
-  margin: auto;
 
-  img {
-    width: 30rem;
-    margin: auto;
-    padding-bottom: 3rem;
-  }
-  ul {
-    width: 40rem;
-    font-family: 'Open sans', sans-serif;
-    font-size: 1.4rem;
-    line-height: 2.5rem;
-    list-style: square;
-  }
-  li {
-    height: 10rem;
-  }
-  .source {
-    font-size: 1.6rem;
-    font-family: 'Open sans', sans-serif;
-  }
-}
 .title-second {
   font-size: 2rem;
   height: 5rem;
