--- a/styles/index.scss
+++ b/styles/index.scss
@@ -17,7 +17,8 @@ $background: rgb(248, 248, 245);
     width: 100%;
   }
 }
-.content {
+main {
+  display: grid;
   width: 100vw;
   height: 100vh;
 }
@@ -42,50 +43,40 @@ nav {
   display: grid;
   align-items: center;
   grid-template-rows: 100vh;
-  width: 100%;
-  @media (max-width: 468px) {
-  }
-  @media (min-width: 748px) and (max-width: 1040px) {
-  }
+  margin-bottom: 5rem;
 }
 .header {
   grid-column: 1/2;
-  grid-row: 1/1;
-  width: 50rem;
+  grid-row: 1/2;
   justify-self: center;
+  width: 50rem;
 
   h1 {
     font-size: 4.8rem;
     text-transform: uppercase;
   }
   @media (max-width: 468px) {
-    grid-row: 1/3;
-    grid-column: 1/3;
+    grid-column: 2/3;
+    width: auto;
+  }
+  @media (max-width: 1048px) {
+    width: auto;
   }
 }
 .first-img {
   grid-column: 2/2;
-  grid-row: 1/2;
   margin: auto;
-  width: 50rem;
-  img {
-    width: 45rem;
-    margin-left: auto;
-    margin-right: auto;
 
-    @media (max-width: 468px) {
-      width: 40rem;
-      grid-row: 2/3;
-    }
-  }
-  @media (min-width: 768px) and (max-width: 1024px) {
+  img {
+    width: 50rem;
+    margin: auto;
   }
   @media (max-width: 468px) {
-    width: 30rem;
+    grid-row: 2/2;
   }
 }
 .title {
-  width: 342px;
+  width: 35rem;
   height: 4rem;
   font-size: 1.8rem;
   line-height: 24px;
@@ -98,11 +89,14 @@ nav {
   font-size: 1.4rem;
   font-weight: 300;
   font-family: 'Open-Sans', sans-serif;
+  @media (max-width: 468px) {
+    width: 40rem;
+  }
 }
 /* Second View  */
 .second-view {
   display: grid;
-  width: 100%;
+  margin: 1rem;
 }
 .second-left {
   grid-row: 2/2;
@@ -128,6 +122,10 @@ nav {
     font-size: 1.6rem;
     font-family: 'Open sans', sans-serif;
   }
+  @media (max-width: 468px) {
+    grid-row: 1/2;
+    grid-column: 2/2;
+  }
 }
 .second-right {
   grid-row: 2/2;
@@ -146,12 +144,16 @@ nav {
     white-space: pre-line;
     height: 100%;
   }
+  @media (max-width: 468px) {
+  }
 }
-h2 {
-  font-size: 3.2rem;
-  margin-left: 4rem;
-}
+.header-second {
+  margin: 4rem;
 
+  h2 {
+    font-size: 3.2rem;
+  }
+}
 .title-second {
   font-size: 2rem;
   height: 5rem;
