--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,7 +3,7 @@
 *::after,
 *::before {
   margin: 0;
-  padding: 0;
+  box-sizing: border-box;
 }
 $background: rgb(248, 248, 245);
 :root {
@@ -18,6 +18,7 @@ $background: rgb(248, 248, 245);
     width: 100%;
   }
 }
+
 main {
   display: grid;
   width: 100vw;
@@ -31,6 +32,7 @@ nav {
   margin: 1rem;
   font-size: 1.6rem;
   text-transform: uppercase;
+  cursor: pointer;
   a {
     color: #000000;
     text-decoration: none;
@@ -97,12 +99,14 @@ nav {
 /* Second View  */
 .second-view {
   display: grid;
+  grid-gap: 4rem;
   margin: 1rem;
 }
 .second-left {
   grid-row: 2/2;
   grid-column: 1/2;
-  margin: auto;
+  margin-right: auto;
+  margin-left: auto;
 
   img {
     width: 30rem;
@@ -131,25 +135,23 @@ nav {
 .second-right {
   grid-row: 2/2;
   grid-column: 2/2;
-  width: 45rem;
   margin: auto;
+
   img {
-    width: 40rem;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
+    width: 45rem;
+    margin: auto;
   }
   .text {
     width: 45rem;
     line-height: 2.5rem;
     white-space: pre-line;
-    height: 100%;
+    margin: auto;
   }
   @media (max-width: 468px) {
   }
 }
 .header-second {
-  margin: 4rem;
+  margin-left: 4rem;
 
   h2 {
     font-size: 3.2rem;
