--- a/styles/index.scss
+++ b/styles/index.scss
@@ -47,6 +47,7 @@ nav {
   align-items: center;
   grid-template-rows: 100vh;
   margin-bottom: 5rem;
+  opacity: 0;
 }
 .header {
   grid-column: 1/2;
