--- a/styles/index.css
+++ b/styles/index.css
@@ -30,70 +30,87 @@ body {
 main {
   display: grid;
   width: 100vw;
-  height: 100vh;
-  margin: 1rem;
+
 }
 nav {
-  width: 100%;
-  margin: auto;
+  width: 90%;
+  height: 7rem;
+  margin: 0 auto;
   text-align: center;
-  font-size: 1.6rem;
   text-transform: uppercase;
   cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+align-items: center;
 }
  nav a {
+  font-size: 1.4rem;
     color: #000000;
     text-decoration: none;
-    padding-left: 1rem;
-    text-align: center;
-    width: 10rem;
   }
-
+nav img{
+  height: 2rem;
+}
 /* First View */
 .first-view {
 width: 100%;
+height: 100%
 }
 .header{
   width: 100%;
-  margin: 2rem;
+  margin: 1rem;
 }
 h1{
   font-size: 4.8rem;
   text-transform: uppercase;
-  width: 50%;
   white-space: pre-wrap;
-  font-weight: 700;
+  font-weight: 900;
   z-index: 1;
   position: absolute;
+
 }
 .shapes{
   width: 100%;
   z-index: 0;
   position: relative;
+  height: 100%;
 }
 .rectangle{
   margin-left: 1rem;
   width: 8rem;
   height: 4rem;
   background: var(--yellow);
+  top:0;
+
 }
 .triangel{
   width: 0;
   height: 0;
-  border-left: 5rem solid transparent;
-  border-right: 5rem solid transparent;
-  border-bottom: 10rem solid var(--green);
+  border-left: 4.5rem solid transparent;
+  border-right: 4.5rem solid transparent;
+  border-bottom: 7.5rem solid var(--green);
+  position: absolute;
+  top: 2rem;
+right: 2rem;
 }
 .circle{
   width: 8rem;
   height: 8rem;
   border-radius: 50%;
   background: var(--pink);
+  position: absolute;
+  bottom: 1rem;
 }
 .sqaure{
-  width: 8rem;
-  height: 8rem;
+  width: 7rem;
+  height: 7rem;
   background: var(--red);
+  right: 1rem;
+  bottom: 1rem;
+  position: absolute;
+}
+.app-description {
+margin: 1rem;
 }
 
 p{
