--- a/styles/index.css
+++ b/styles/index.css
@@ -28,8 +28,8 @@ body {
 
 
 main {
-  display: grid;
   width: 100vw;
+  height: 100vh;
 
 }
 nav {
@@ -53,8 +53,8 @@ nav img{
 }
 /* First View */
 .first-view {
+  display: grid;
 width: 100%;
-height: 100%
 }
 .header{
   width: 100%;
@@ -73,7 +73,7 @@ h1{
   width: 100%;
   z-index: 0;
   position: relative;
-  height: 100%;
+  height: 20rem;
 }
 .rectangle{
   margin-left: 1rem;
@@ -118,4 +118,9 @@ letter-spacing: .1rem;
 font-size: 1.2rem;
 font-weight: 300;
 line-height: 2.2rem;
+}
+.second-view {
+  width: 100%;
+   height: 100%;
+padding-top: 5rem;
 }
