--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,6 @@ body {
 main {
   width: 100vw;
   height: 100vh;
-  letter-spacing: 0.05rem;
 }
 nav {
   width: 90%;
@@ -131,8 +130,17 @@ h2 {
   font-size: 1.2rem;
   font-weight: 300;
   line-height: 2rem;
-  white-space: pre-line;
+  white-space: break-spaces;
 }
 h3 {
   font-size: 1.2rem;
+}
+.callout {
+  width: 100%;
+  height: 3.4rem;
+  font-size: 1.2rem;
+  margin: 0 auto;
+  color: #000000;
+  border: 0.3rem solid #000000;
+  background-color: var(--yellow);
 }
