--- a/styles/index.css
+++ b/styles/index.css
@@ -118,7 +118,7 @@ h1 {
 .second-view,
 .third-view,
 .fourth-view {
-  padding-top: 5rem;
+  padding-top: 4rem;
   margin: 1rem;
 }
 
@@ -193,4 +193,18 @@ h3 {
   color: #f0eee8;
   font-size: 1.2rem;
   line-height: 1.5rem;
+}
+footer {
+  display: flex;
+  flex-direction: 'row';
+  height: 3rem;
+  border: 0.5rem solid var(--primary);
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+}
+footer p {
+  padding-right: 0.2rem;
+  font-weight: 700;
+  font-size: 1.5rem;
 }
