--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+*:focus {
+  outline: 0;
+  color: var(--pink);
+}
 
 :root {
   --background: #f0eee8;
@@ -133,45 +137,35 @@ h3 {
   line-height: 2rem;
   white-space: break-spaces;
 }
+/* poll */
 
-/* checkbox  */
-.checkbox {
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  height: 3rem;
-  font-size: 1.2rem;
+.poll ul {
+  width: 15rem;
+}
+.poll ul li {
+  list-style: none;
+  border: 0.2rem solid var(--primary);
+  border-radius: 3rem;
+  line-height: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+.poll ul li button {
+  border: none;
+  background-color: transparent;
+  width: 100%;
+  padding: 0.5rem;
+  margin: 0 auto;
   font-weight: 700;
 }
-.checkbox input[type='checkbox'] {
-  position: absolute;
-  width: 1em;
-  height: 1em;
-  opacity: 0;
-}
-.checkbox svg {
-  flex-direction: column;
-  justify-content: space-between;
-  margin-right: 0.5em;
-  margin-top: 0.1em;
-  transition: all 0.1s linear;
+
+.poll ul li span {
+  display: none;
 }
 
-.checkbox input[type='checkbox']:checked + svg .cb-bg {
-  fill: #000000;
-  stroke: #000000;
+.poll ul.results li {
+  border-color: var(--green);
 }
-.checkbox input[type='checkbox']:checked + svg .cb-cm {
-  stroke: var(--background);
-}
-.checkbox input[type='checkbox']:focus + svg {
-  outline: 0.3rem solid #000000;
-  outline-offset: 0.2rem;
-}
-.checkbox input[type='checkbox']:focus:not(:focus-visible) + svg {
-  outline: none;
-}
-
 .callout {
   display: flex;
   justify-content: center;
