--- a/styles/index.css
+++ b/styles/index.css
@@ -19,13 +19,14 @@
   --red: #eb483d;
 }
 
+html {
+  font-size: 16px;
+}
 body {
   font-family: 'Helvetica', sans-serif;
-  font-size: 1.6rem;
   background-color: var(--background);
   height: 100%;
   width: 100%;
-  font-size: 62.5%;
   overflow-x: hidden;
 }
 
@@ -137,27 +138,6 @@ h3 {
   line-height: 2rem;
   white-space: break-spaces;
 }
-/* poll */
-
-.poll ul {
-  width: 15rem;
-}
-.poll ul li {
-  list-style: none;
-  border: 0.2rem solid var(--primary);
-  border-radius: 3rem;
-  line-height: 1rem;
-  margin-bottom: 1rem;
-  width: 100%;
-}
-.poll ul li button {
-  border: none;
-  background-color: transparent;
-  width: 100%;
-  padding: 0.5rem;
-  margin: 0 auto;
-  font-weight: 700;
-}
 .callout {
   display: flex;
   justify-content: center;
@@ -180,24 +160,52 @@ h3 {
   font-size: 1.2rem;
   line-height: 1.5rem;
 }
+/* poll */
+.poll {
+  width: 100%;
+  font-size: 1.2rem;
+}
+.poll p {
+  font-weight: 700;
+}
+.poll li {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  list-style: none;
+  border: 0.2rem solid var(--primary);
+  border-radius: 3rem;
+  line-height: 1rem;
+}
+.poll li button {
+  padding: 0.5rem;
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  margin: 0 auto;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
 .progress-bar {
-  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.progress-bar span {
+  padding: 0.4rem 0.4rem;
 }
 progress {
-  display: flex;
-  justify-content: space-around;
-  height: 1.8rem;
-  width: 15rem;
-  border-radius: 1rem;
+  height: 2.5rem;
+  width: 100%;
+  border-radius: 3rem;
   border: 1px solid var(--primary);
 }
 progress::-webkit-progress-bar {
   background-color: var(--background);
-  border-radius: 1rem;
+  border-radius: 3rem;
 }
 progress::-webkit-progress-value {
   background-color: var(--green);
-  border-radius: 1rem;
+  border-radius: 3rem;
 }
 footer {
   display: flex;
