--- a/styles/index.css
+++ b/styles/index.css
@@ -90,6 +90,7 @@ nav p {
 /* First View */
 .first-view {
   margin: 1rem;
+  height: 100vh;
 }
 .header {
   display: flex;
@@ -97,7 +98,7 @@ nav p {
   justify-content: space-between;
   z-index: 1;
   position: relative;
-  height: 90%;
+  height: 100%;
 }
 h1 {
   font-size: 7.8rem;
@@ -317,6 +318,7 @@ footer p {
   }
   .header {
     width: 50rem;
+    height: 50rem;
   }
   h1 {
     font-size: 12rem;
