--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,7 @@ html {
 body {
   font-family: 'Helvetica', sans-serif;
   background-color: var(--background);
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   overflow-x: hidden;
   font-size: 16px;
@@ -33,8 +33,7 @@ body {
 }
 
 main {
-  width: 100vw;
-  min-height: 100vh;
+  position: relative;
 }
 nav {
   width: 90%;
@@ -65,21 +64,21 @@ nav p {
   top: 0;
   left: 0;
   bottom: 0;
-  height: 100vh;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
 }
 .side-menu {
   background-color: var(--background);
-  height: 100vh;
   top: 0;
   right: 0;
+  bottom: 0;
   position: absolute;
-  width: 30vw;
-  z-index: 2;
+  width: 30%;
+  z-index: 3;
   transition: 0.3s ease-in-out;
-  overflow-x: scroll;
 }
+
 .side-menu a {
   display: flex;
   justify-content: flex-end;
@@ -113,7 +112,7 @@ h1 {
   grid-gap: 1rem;
   z-index: 0;
   position: absolute;
-  top: 10%;
+  top: 10rem;
 }
 .rectangle {
   margin-left: 1rem;
@@ -294,26 +293,18 @@ footer p {
 /* Desktop styles */
 
 @media screen and (min-width: 34rem) {
-  main {
-    margin: 0 auto;
-    position: relative;
-    min-height: 100vh;
-  }
+  .first-view,
   .second-view,
   .third-view,
-  .fourth-view,
-  .highlight {
+  .fourth-view {
     width: 90%;
     margin: 0 auto;
   }
   .first-view {
-    width: 90%;
     display: grid;
     padding-top: 4rem;
     height: 90vh;
-    width: 90%;
     margin: 0 auto;
-    overflow-x: hidden;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
   .header {
@@ -390,7 +381,6 @@ footer p {
   .first-view {
     height: 60vh;
   }
-
   .description p,
   .image {
     grid-column: 1;
