--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Viga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap');
 *,
 *::after,
 *::before {
@@ -12,19 +12,21 @@
 
 :root {
   --background: #f0eee8;
-  --primary: #000000;
+  --primary: #000320;
   --yellow: #f1d02c;
   --pink: #e88fa3;
   --green: #40a857;
   --red: #eb483d;
+  --night: #000320;
 }
 
 html {
   font-size: 62.5%;
 }
 body {
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background-color: var(--background);
+  color: var(--night);
   min-height: 100vh;
   width: 100%;
   overflow-x: hidden;
@@ -49,7 +51,6 @@ nav {
 nav a,
 .side-menu a {
   font-size: 2rem;
-  color: #000000;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -103,7 +104,7 @@ h1 {
   font-size: 7.8rem;
   text-transform: uppercase;
   white-space: pre-wrap;
-  font-weight: 900;
+  font-weight: 700;
 }
 .shapes {
   display: grid;
@@ -170,7 +171,6 @@ h1 {
   justify-content: center;
   align-items: center;
   width: 100%;
-  font-weight: 900;
   height: auto;
   border: 0.3rem solid;
   margin-bottom: 3rem;
@@ -179,8 +179,7 @@ h1 {
 }
 
 .highlight {
-  border: 1rem solid #000320;
-  color: #000320;
+  border: 1rem solid var(--night);
   height: auto;
   padding: 2.5rem;
   line-height: 2.5rem;
@@ -309,10 +308,12 @@ footer p {
   }
   .header {
     width: 50rem;
-    height: 50rem;
+    height: 55rem;
   }
   h1 {
     font-size: 12rem;
+    line-height: 13rem;
+    font-weight: 800;
   }
   .app-description p {
     line-height: 3.2rem;
