--- a/styles/index.css
+++ b/styles/index.css
@@ -37,6 +37,7 @@ body {
 main {
   overflow-x: hidden;
   position: relative;
+  border: 2rem solid #000320;
 }
 nav {
   width: 90%;
@@ -158,6 +159,11 @@ h1 {
   height: 1rem;
   width: 8rem;
   margin-bottom: 1rem;
+}
+.inner {
+  width: 90%;
+  margin: 0 auto;
+  z-index: 1;
 }
 /* second view */
 .first-view,
@@ -297,15 +303,6 @@ footer p {
 /* Desktop styles */
 
 @media screen and (min-width: 34rem) {
-  .first-view,
-  .second-view,
-  .third-view,
-  .fourth-view,
-  .highlight {
-    margin: 0 auto;
-    width: 90%;
-  }
-
   .side-menu {
     width: 30%;
   }
@@ -313,11 +310,12 @@ footer p {
     display: grid;
     padding-top: 4rem;
     height: 90vh;
-    margin: 0 auto;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    width: 90%;
+    margin: 0 auto;
   }
   .header {
-    width: 50rem;
+    width: 40rem;
     height: 55rem;
   }
   h1 {
@@ -327,21 +325,23 @@ footer p {
   }
   .shapes {
     display: grid;
-    grid-auto-rows: 25rem;
+    grid-auto-rows: 28rem;
     height: 55rem;
-    width: 90%;
     position: unset;
   }
   .rectangle {
+    margin-top: 3rem;
     height: 15rem;
     width: 30rem;
   }
   .triangel {
+    margin-top: -2rem;
     border-left: 15rem solid transparent;
     border-right: 15rem solid transparent;
-    border-bottom: 23rem solid var(--green);
+    border-bottom: 26rem solid var(--green);
   }
   .circle {
+    margin-top: -2rem;
     width: 26rem;
     height: 26rem;
   }
