--- a/styles/index.css
+++ b/styles/index.css
@@ -25,8 +25,8 @@ html {
 }
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: var(--background);
-  color: var(--night);
+  background-color: var(--background-color);
+  color: var(--color);
   min-height: 100vh;
   width: 100%;
   overflow-x: hidden;
@@ -51,7 +51,6 @@ nav {
   text-transform: uppercase;
   cursor: pointer;
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 nav a,
@@ -80,7 +79,7 @@ nav p {
   z-index: 2;
 }
 .side-menu {
-  background-color: var(--background);
+  background-color: var(--background-color);
   top: 0;
   right: 0;
   bottom: 0;
@@ -189,7 +188,7 @@ h1 {
 }
 
 .highlight {
-  border: 1rem solid var(--night);
+  border: 1rem solid var(--color);
   height: auto;
   padding: 2.5rem;
   line-height: 2.5rem;
@@ -234,11 +233,12 @@ h1 {
   padding: 0.5rem;
   margin-bottom: 1rem;
   list-style: none;
-  border: 0.2rem solid var(--primary);
+  border: 0.2rem solid var(--color);
   border-radius: 3rem;
   line-height: 1rem;
 }
 .poll li button {
+  color: var(--color);
   padding: 0.3rem;
   width: 100%;
   border: none;
@@ -259,18 +259,18 @@ progress {
   height: 3.5rem;
   width: 100%;
   border-radius: 3rem;
-  border: 1px solid var(--primary);
+  border: 1px solid var(--color);
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   background-color: transparent;
 }
 progress::-webkit-progress-bar {
-  background-color: var(--background);
+  background-color: var(--background-color);
   border-radius: 3rem;
 }
 progress::-moz-progress-bar {
-  background-color: var(--background);
+  background-color: var(--background-color);
   border-radius: 3rem;
 }
 progress::-webkit-progress-value {
