--- a/styles/index.css
+++ b/styles/index.css
@@ -324,7 +324,8 @@ progress::-moz-progress-bar {
   fill: none;
 }
 
-.loader {
+.loader,
+.error {
   display: flex;
   justify-content: center;
   height: 5rem;
