--- a/styles/index.css
+++ b/styles/index.css
@@ -311,11 +311,12 @@ progress::-moz-progress-bar {
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  margin-top: 0.3rem;
+  margin-top: 0.4rem;
 }
 
 .checkbox__dark {
-  box-shadow: 0.7rem 0.1rem 0 0 var(--color);
+  box-shadow: 1rem 0 var(--color);
+  fill: none;
 }
 .checkbox__light circle:last-of-type {
   stroke: var(--color);
